# contract-sentinel

./: .dockerignore  .env.local  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  justfile  pyproject.toml
.github/workflows/: publish.yml  quality.yml
contract_sentinel/: __init__.py  config.py  factory.py  settings.py
contract_sentinel/adapters/: contract_store.py  schema_parser.py
contract_sentinel/adapters/schema_parsers/: marshmallow.py  parser.py
contract_sentinel/cli/: main.py  publish.py  validate.py
contract_sentinel/domain/: contract.py  errors.py  fix_suggestions.py  framework.py  loader.py  marker.py  participant.py  report.py  rules.py  schema.py  validation.py
contract_sentinel/domain/rules/: __init__.py  binary_rule.py  consumer_only_rule.py  counterpart_mismatch.py  direction_mismatch.py  engine.py  metadata_mismatch.py  missing_field.py  nested_field.py  nullability_mismatch.py  producer_only_rule.py  requirement_mismatch.py  rule.py  structure_mismatch.py  type_mismatch.py  undeclared_field.py  violation.py
contract_sentinel/ports/: contract_store.py  schema_parser.py
contract_sentinel/services/: publish.py  validate.py
contributors/: contributing.md  how-to-add-a-contract-store.md  how-to-add-a-parser.md  how-to-add-a-rule.md
docs/: how-to-add-a-rule.md
docs/features/001-repo-setup/: product_spec.md  tickets.md
docs/features/002-contract-validation/: design.md  product_spec.md  tickets.md
docs/features/003-fix-suggestions/: design.md  product_spec.md  tickets.md
docs/features/004-marshmallow4-support/: design.md  product_spec.md  tickets.md
docs/features/005-rule-dx/: tickets.md
docs/features/006-library-polish/: design.md  product_spec.md  tickets.md
docs/features/006-pydantic-v2-parser/: design.md  product_spec.md  tickets.md
docs/features/007-additional-contract-stores/: design.md  product_spec.md  tickets.md
docs/features/999-standalone-tickets/: ticket-additional-validators.md  ticket-callable-defaults.md  ticket-markdown-flag.md
docs/features/_template/: tickets.md
tests/: conftest.py
tests/integration/: conftest.py
tests/unit/: helpers.py  test_config.py  test_factory.py  test_init.py
(+70 files in other folders)
