[project]
name = "contract-sentinel"
version = "0.1.0"
description = "Open-source contract testing without a central broker"
requires-python = ">=3.12"
dependencies = ["typer>=0.12"]

[project.optional-dependencies]
s3 = [
    "boto3>=1.42.70",
]
marshmallow = [
    "marshmallow>=3.13,<5.0",
]
all = [
    "boto3>=1.42.70",
    "marshmallow>=3.13,<5.0",
]

[project.scripts]
sentinel = "contract_sentinel.cli.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-n auto"

[dependency-groups]
dev = [
    "boto3>=1.42.70",
    "boto3-stubs[s3]>=1.42.70",
    "marshmallow>=3.13,<5.0",
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-xdist>=3.0",
    "ruff>=0.9",
    "ty>=0.0.0a1",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP", "B", "SIM", "TCH", "ANN", "RUF"]
ignore = []

[tool.ruff.lint.isort]
known-first-party = ["contract_sentinel"]

[tool.ty.environment]
# Strict type checking — no implicit Any, no untyped defs
python-version = "3.12"
